# PaperPilot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  buildspec.deploy-prod.yml  buildspec.deploy-staging.yml  buildspec.e2e-staging.yml  buildspec.smoke-prod.yml  buildspec.test.yml  buildspec.yml  function_app.py  main.py  pyproject.toml
.github/workflows/: azure-functions-deploy.yml  azure-infra-deploy.yml  azure-static-web-apps.yml  frontend-pages.yml  master_paperpilot-api.yml
app/: http_utils.py  jobs.py  notifications.py  pipeline.py  utils.py  worker.py
azure-functions/: .funcignore  function_app.py  host.json  requirements.txt
azure-functions/app/: __init__.py  clients.py  config.py  http_routes.py  jobs.py  monitoring.py  parsing.py  pipeline.py  results.py  telemetry.py  utils.py  watchdog.py  worker.py
docs/: API_CONTRACT.md  DEPLOYMENT.md  PIPELINE.md  QUICK_DIAGNOSTIC.md  SET_API_KEY.md  TEST_MATRIX.md  TROUBLESHOOTING.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  astro.config.mjs  index.html  package-lock.json  package.json  staticwebapp.config.json  tailwind.config.js  vite.config.ts
frontend/public/: CNAME  robots.txt
frontend/src/: App.css  App.tsx  config.ts  env.d.ts  index.css  main.tsx
frontend/src/components/: AboutSection.tsx  AppBar.tsx  ClusteringForm.tsx  ClusteringView.tsx  ClusteringVisualization.tsx  SEO.tsx  (+41 more)
infra/: README.md  docker-compose.local.yml  env.local.json  main.bicep  main.json  pipeline.yaml  samconfig.toml  template.yaml
infra/events/: api-health.json  sqs-pipeline-job.json  sqs-search-job.json
infra/init-localstack/: 01-init-aws-resources.sh
infra/modules/: cosmos.bicep  functionApp.bicep  functionAppFull.bicep  keyVault.bicep  serviceBus.bicep  storage.bicep
infra/params/: prod.bicepparam
papernavigator/: __init__.py  async_utils.py  augment.py  cluster.py  events.py  filter.py  graph.py  judge.py  models.py  openalex.py  profiler.py  ranker.py  results.py  search.py  service.py  snowball.py  timeline.py  visualize.py
papernavigator/elo_ranker/: __init__.py  display.py  elo.py  judge.py  models.py  pairing.py  ranker.py  stopping.py
papernavigator/report/: __init__.py  auditor.py  cards.py  generator.py  outline.py  writer.py
paperpilot/: __init__.py
paperpilot/api/: __init__.py  main.py  schemas.py
paperpilot/aws/: __init__.py  helpers.py
paperpilot/cli/: __init__.py  app.py  console.py  handlers.py  interactive.py
paperpilot/core/: __init__.py  augment.py  cluster.py  events.py  filter.py  graph.py  job_repository.py  judge.py  logging.py  models.py  openalex.py  profiler.py  queue_service.py  ranker.py  results.py  search.py  service.py  snowball.py  timeline.py  visualize.py
results/: README.md
results/ai_in_heath_care/: elo_ranked_k32_pswiss.json  metadata.json  report_top_k30.json  snowball.json
results/ai_in_law/: elo_ranked_k32_pswiss.json  metadata.json  report_top_k30.json  snowball.json
results/borderline_personality_disorder/: metadata.json  snowball.json
results/how_chatgpt_effects_students/: clusters_dpca_mdbscan.html  clusters_dpca_mdbscan.json  elo_ranked_k32_pswiss.json  metadata.json  report_top_k50.json  snowball.json
results/llm_based_recommender_systems/: clusters_dpca_mdbscan.html  clusters_dpca_mdbscan.json  clusters_dpca_mkmeans_k3.html  clusters_dpca_mkmeans_k3.json  elo_ranked_k32_pswiss.json  graph_dirboth_l100.html  graph_dirboth_l100.json  metadata.json  report_top_k30.json  snowball.json  timeline.html  timeline.json
results/llm_in_healthcare/: metadata.json  report_top_k30.json
results/multi_modal_llms/: metadata.json  snowball.json
services/api/: __init__.py  handler.py  requirements.txt
services/worker/: __init__.py  handler.py  local_poller.py  requirements.txt
tests/: __init__.py  conftest.py
tests/component/: __init__.py  test_api_contract.py  test_api_routes.py  test_worker_handler.py
tests/e2e/: __init__.py  test_staging.py
tests/integration/: __init__.py  test_localstack.py
tests/smoke/: __init__.py  test_prod_health.py
tests/unit/: __init__.py  test_api_helpers.py  test_worker_helpers.py
(+83 files in other folders)
