[project]
name = "papernavigator"
version = "0.1.0"
description = "AI-powered academic literature discovery using snowball sampling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "tqdm>=4.67.1",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "plotly>=5.18.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
# Optional clustering dependencies (require Python < 3.13)
cluster-full = [
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.5",
]
# Test dependencies
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "moto[dynamodb,sqs,s3]>=5.0.0",
    "hypothesis>=6.100.0",
]
# Development dependencies (linting, formatting, type-checking)
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "pre-commit>=4.0.0",
]

[tool.setuptools]
packages = ["papernavigator"]

[tool.uv]
package = true

# =============================================================================
# pytest configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: fast unit tests with no external dependencies",
    "component: component tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "smoke: post-deploy smoke tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# ruff configuration
# =============================================================================
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["papernavigator", "azure-functions", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in handlers)
]

[tool.ruff.lint.isort]
known-first-party = ["papernavigator"]

# =============================================================================
# pyright configuration
# =============================================================================
[tool.pyright]
include = ["papernavigator", "azure-functions", "tests"]
exclude = ["**/__pycache__", "results", "frontend", ".venv"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

# =============================================================================
# coverage configuration
# =============================================================================
[tool.coverage.run]
source = ["papernavigator"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
